# Potcoin

./: CMakeLists.txt  COPYING  INSTALL  Makefile  README.md  potcoin-qt.pro
contrib/: check-upstream.sh
contrib/bitrpc/: bitrpc.py
contrib/debian/manpages/: bitcoin-qt.1  bitcoind.1
contrib/docker/: Dockerfile_electrum_server  Dockerfile_reddcoind  reddcoin.conf
contrib/gitian-descriptors/: deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-win.yml
contrib/linearize/: example-linearize.cfg
contrib/macdeploy/: background.psd  fancy.plist  macdeployqtplus
doc/: Doxyfile  README.md  README_windows.txt  Tor.txt  build-msw.md  build-osx.md  build-unix.md  readme-qt.rst  release-notes.md  release-process.md  unit-tests.md
share/: setup.nsi
share/qt/: clean_mac_info_plist.py
src/: alert.cpp  base58.h  bignum.h  bitcoinrpc.cpp  bitcoinrpc.h  bloom.cpp  checkpoints.cpp  checkpoints.h  clientversion.h  init.cpp  kernel.cpp  kernel.h  key.cpp  main.cpp  main.h  makefile.linux-mingw  makefile.mingw  makefile.osx  makefile.unix  miner.cpp  miner.h  net.cpp  net.h  netbase.cpp  protocol.h  rpcblockchain.cpp  rpcdump.cpp  rpcmining.cpp  rpcrawtransaction.cpp  rpcwallet.cpp  sync.cpp  txdb-leveldb.cpp  txdb-leveldb.h  txdb.cpp  txdb.h  util.cpp  util.h  version.cpp  version.h  wallet.cpp  (+2 more)
src/leveldb/util/: env_posix.cc
src/qt/: aboutdialog.cpp  addressbookpage.cpp  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoin.cpp  bitcoin.qrc  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  clientmodel.cpp  coincontroldialog.cpp  coincontroldialog.h  editaddressdialog.cpp  guiutil.cpp  guiutil.h  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  overviewpage.h  paymentserver.cpp  qrcodedialog.cpp  rpcconsole.cpp  sendcoinsdialog.cpp  sendcoinsdialog.h  sendcoinsentry.cpp  signverifymessagedialog.cpp  splashscreen.cpp  transactiondesc.cpp  transactionrecord.cpp  transactionrecord.h  transactiontablemodel.cpp  transactionview.cpp  walletframe.cpp  walletframe.h  walletmodel.cpp  walletmodel.h  walletstack.cpp  walletstack.h  walletview.cpp  (+1 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  optionsdialog.ui  overviewpage.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af_ZA.qm  bitcoin_af_ZA.ts  bitcoin_ar.qm  bitcoin_ar.ts  bitcoin_bg.qm  bitcoin_bg.ts  bitcoin_bs.qm  bitcoin_bs.ts  bitcoin_ca.qm  bitcoin_ca.ts  bitcoin_ca_ES.qm  bitcoin_ca_ES.ts  bitcoin_cs.qm  bitcoin_cs.ts  bitcoin_cy.qm  bitcoin_cy.ts  bitcoin_da.qm  bitcoin_da.ts  bitcoin_de.qm  bitcoin_de.ts  bitcoin_el_GR.qm  bitcoin_el_GR.ts  bitcoin_en.qm  bitcoin_en.ts  bitcoin_eo.qm  bitcoin_eo.ts  bitcoin_es.qm  bitcoin_es.ts  bitcoin_es_CL.qm  bitcoin_es_CL.ts  bitcoin_et.qm  bitcoin_et.ts  bitcoin_eu_ES.qm  bitcoin_eu_ES.ts  bitcoin_fa.qm  bitcoin_fa.ts  bitcoin_fa_IR.qm  bitcoin_fa_IR.ts  bitcoin_fi.qm  bitcoin_fi.ts  (+54 more)
src/qt/res/: bitcoin-qt.rc
src/qt/res/icons/: Thumbs.db  bitcoin.icns  potcoin.icns  reddcoin.icns
src/qt/test/: uritests.cpp
src/test/: compress_tests.cpp  test_bitcoin.cpp  transaction_tests.cpp
