cmake_minimum_required(VERSION 2.8.4)
project(Potcoin_V2)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    .idea/scopes/scope_settings.xml
    .idea/.name
    .idea/deployment.xml
    .idea/encodings.xml
    .idea/misc.xml
    .idea/modules.xml
    ".idea/Potcoin V2.iml"
    .idea/vcs.xml
    .idea/workspace.xml
    contrib/bitrpc/bitrpc.py
    contrib/debian/examples/bitcoin.conf
    contrib/debian/manpages/bitcoin-qt.1
    contrib/debian/manpages/bitcoin.conf.5
    contrib/debian/manpages/bitcoind.1
    contrib/debian/patches/README
    contrib/debian/patches/series
    contrib/debian/source/format
    contrib/debian/bitcoin-qt.desktop
    contrib/debian/bitcoin-qt.install
    contrib/debian/bitcoin-qt.lintian-overrides
    contrib/debian/bitcoin-qt.protocol
    contrib/debian/bitcoind.bash-completion
    contrib/debian/bitcoind.examples
    contrib/debian/bitcoind.install
    contrib/debian/bitcoind.lintian-overrides
    contrib/debian/bitcoind.manpages
    contrib/debian/changelog
    contrib/debian/compat
    contrib/debian/control
    contrib/debian/copyright
    contrib/debian/gbp.conf
    contrib/debian/README
    contrib/debian/rules
    contrib/debian/watch
    contrib/docker/Dockerfile_electrum_server
    contrib/docker/Dockerfile_reddcoind
    contrib/docker/reddcoin.conf
    contrib/gitian-descriptors/boost-linux.yml
    contrib/gitian-descriptors/boost-win.yml
    contrib/gitian-descriptors/deps-linux.yml
    contrib/gitian-descriptors/deps-win.yml
    contrib/gitian-descriptors/gitian-linux.yml
    contrib/gitian-descriptors/gitian-win.yml
    contrib/gitian-descriptors/qt-win.yml
    contrib/gitian-descriptors/README
    contrib/gitian-downloader/aspect-key.pgp
    contrib/gitian-downloader/bluematt-key.pgp
    contrib/gitian-downloader/coblee-key.pgp
    contrib/gitian-downloader/devrandom-key.pgp
    contrib/gitian-downloader/face-key.pgp
    contrib/gitian-downloader/gavinandresen-key.pgp
    contrib/gitian-downloader/laanwj-key.pgp
    contrib/gitian-downloader/linux-download-config
    contrib/gitian-downloader/luke-jr-key.pgp
    contrib/gitian-downloader/sipa-key.pgp
    contrib/gitian-downloader/tcatm-key.pgp
    contrib/gitian-downloader/thrasher-key.pgp
    contrib/gitian-downloader/win32-download-config
    contrib/gitian-downloader/wtogami-key.pgp
    contrib/homebrew/bitcoin.qt.pro.patch
    contrib/homebrew/makefile.osx.patch
    contrib/linearize/example-linearize.cfg
    contrib/linearize/linearize.py
    contrib/linearize/README.md
    contrib/macdeploy/background.png
    contrib/macdeploy/background.psd
    contrib/macdeploy/fancy.plist
    contrib/macdeploy/LICENSE
    contrib/macdeploy/macdeployqtplus
    contrib/macdeploy/notes.txt
    contrib/pyminer/example-config.cfg
    contrib/pyminer/pyminer.py
    contrib/pyminer/README
    contrib/seeds/makeseeds.py
    contrib/seeds/README
    contrib/spendfrom/README
    contrib/spendfrom/setup.py
    contrib/spendfrom/spendfrom.py
    contrib/test-patches/bitcoind-comparison.patch
    contrib/test-patches/README
    contrib/test-patches/temp-revert-1.patch
    contrib/test-patches/temp-revert-2.patch
    contrib/test-patches/temp-revert-3.patch
    contrib/test-patches/temp-revert-4.patch
    contrib/testgen/base58.py
    contrib/testgen/gen_base58_test_vectors.py
    contrib/testgen/README
    contrib/wallettools/walletchangepass.py
    contrib/wallettools/walletunlock.py
    contrib/bitcoind.bash-completion
    contrib/check-upstream.sh
    contrib/qt_translations.py
    contrib/tidy_datadir.sh
    doc/assets-attribution.txt
    doc/bitcoin_logo_doxygen.png
    doc/build-msw.md
    doc/build-osx.md
    doc/build-unix.md
    doc/coding.md
    doc/Doxyfile
    doc/files.txt
    doc/multiwallet-qt.md
    doc/readme-qt.rst
    doc/README.md
    doc/README_windows.txt
    doc/release-notes.md
    doc/release-process.md
    doc/Tor.txt
    doc/translation_process.md
    doc/unit-tests.md
    qa/rpc-tests/txnmall.sh
    share/certs/BitcoinFoundation_Apple_Cert.pem
    share/certs/BitcoinFoundation_Comodo_Cert.pem
    share/certs/PrivateKeyNotes.md
    share/pixmaps/addressbook16.bmp
    share/pixmaps/addressbook16mask.bmp
    share/pixmaps/addressbook20.bmp
    share/pixmaps/addressbook20mask.bmp
    share/pixmaps/bitcoin-bc.ico
    share/pixmaps/bitcoin.ico
    share/pixmaps/bitcoin128.png
    share/pixmaps/bitcoin128.xpm
    share/pixmaps/bitcoin16.png
    share/pixmaps/bitcoin16.xpm
    share/pixmaps/bitcoin256.png
    share/pixmaps/bitcoin256.xpm
    share/pixmaps/bitcoin32.png
    share/pixmaps/bitcoin32.xpm
    share/pixmaps/bitcoin64.png
    share/pixmaps/bitcoin64.xpm
    share/pixmaps/check.ico
    share/pixmaps/favicon.ico
    share/pixmaps/nsis-header.bmp
    share/pixmaps/nsis-wizard.bmp
    share/pixmaps/send16.bmp
    share/pixmaps/send16mask.bmp
    share/pixmaps/send16masknoshadow.bmp
    share/pixmaps/send20.bmp
    share/pixmaps/send20mask.bmp
    share/qt/img/reload.xcf
    share/qt/clean_mac_info_plist.py
    share/qt/extract_strings_qt.py
    share/qt/Info.plist
    share/qt/make_spinner.py
    share/qt/make_windows_icon.sh
    share/genbuild.sh
    share/setup.nsi
    share/ui.rc
    src/json/json_spirit.h
    src/json/json_spirit_error_position.h
    src/json/json_spirit_reader.cpp
    src/json/json_spirit_reader.h
    src/json/json_spirit_reader_template.h
    src/json/json_spirit_stream_reader.h
    src/json/json_spirit_utils.h
    src/json/json_spirit_value.cpp
    src/json/json_spirit_value.h
    src/json/json_spirit_writer.cpp
    src/json/json_spirit_writer.h
    src/json/json_spirit_writer_template.h
    src/json/LICENSE.txt
    src/leveldb/db/autocompact_test.cc
    src/leveldb/db/builder.cc
    src/leveldb/db/builder.h
    src/leveldb/db/c.cc
    src/leveldb/db/c_test.c
    src/leveldb/db/corruption_test.cc
    src/leveldb/db/db_bench.cc
    src/leveldb/db/db_impl.cc
    src/leveldb/db/db_impl.h
    src/leveldb/db/db_iter.cc
    src/leveldb/db/db_iter.h
    src/leveldb/db/db_test.cc
    src/leveldb/db/dbformat.cc
    src/leveldb/db/dbformat.h
    src/leveldb/db/dbformat_test.cc
    src/leveldb/db/filename.cc
    src/leveldb/db/filename.h
    src/leveldb/db/filename_test.cc
    src/leveldb/db/leveldb_main.cc
    src/leveldb/db/log_format.h
    src/leveldb/db/log_reader.cc
    src/leveldb/db/log_reader.h
    src/leveldb/db/log_test.cc
    src/leveldb/db/log_writer.cc
    src/leveldb/db/log_writer.h
    src/leveldb/db/memtable.cc
    src/leveldb/db/memtable.h
    src/leveldb/db/repair.cc
    src/leveldb/db/skiplist.h
    src/leveldb/db/skiplist_test.cc
    src/leveldb/db/snapshot.h
    src/leveldb/db/table_cache.cc
    src/leveldb/db/table_cache.h
    src/leveldb/db/version_edit.cc
    src/leveldb/db/version_edit.h
    src/leveldb/db/version_edit_test.cc
    src/leveldb/db/version_set.cc
    src/leveldb/db/version_set.h
    src/leveldb/db/version_set_test.cc
    src/leveldb/db/write_batch.cc
    src/leveldb/db/write_batch_internal.h
    src/leveldb/db/write_batch_test.cc
    src/leveldb/doc/bench/db_bench_sqlite3.cc
    src/leveldb/doc/bench/db_bench_tree_db.cc
    src/leveldb/doc/benchmark.html
    src/leveldb/doc/doc.css
    src/leveldb/doc/impl.html
    src/leveldb/doc/index.html
    src/leveldb/doc/log_format.txt
    src/leveldb/doc/table_format.txt
    src/leveldb/helpers/memenv/memenv.cc
    src/leveldb/helpers/memenv/memenv.h
    src/leveldb/helpers/memenv/memenv_test.cc
    src/leveldb/include/leveldb/c.h
    src/leveldb/include/leveldb/cache.h
    src/leveldb/include/leveldb/comparator.h
    src/leveldb/include/leveldb/db.h
    src/leveldb/include/leveldb/env.h
    src/leveldb/include/leveldb/filter_policy.h
    src/leveldb/include/leveldb/iterator.h
    src/leveldb/include/leveldb/options.h
    src/leveldb/include/leveldb/slice.h
    src/leveldb/include/leveldb/status.h
    src/leveldb/include/leveldb/table.h
    src/leveldb/include/leveldb/table_builder.h
    src/leveldb/include/leveldb/write_batch.h
    src/leveldb/issues/issue178_test.cc
    src/leveldb/port/win/stdint.h
    src/leveldb/port/atomic_pointer.h
    src/leveldb/port/port.h
    src/leveldb/port/port_example.h
    src/leveldb/port/port_posix.cc
    src/leveldb/port/port_posix.h
    src/leveldb/port/port_win.cc
    src/leveldb/port/port_win.h
    src/leveldb/port/README
    src/leveldb/port/thread_annotations.h
    src/leveldb/table/block.cc
    src/leveldb/table/block.h
    src/leveldb/table/block_builder.cc
    src/leveldb/table/block_builder.h
    src/leveldb/table/filter_block.cc
    src/leveldb/table/filter_block.h
    src/leveldb/table/filter_block_test.cc
    src/leveldb/table/format.cc
    src/leveldb/table/format.h
    src/leveldb/table/iterator.cc
    src/leveldb/table/iterator_wrapper.h
    src/leveldb/table/merger.cc
    src/leveldb/table/merger.h
    src/leveldb/table/table.cc
    src/leveldb/table/table_builder.cc
    src/leveldb/table/table_test.cc
    src/leveldb/table/two_level_iterator.cc
    src/leveldb/table/two_level_iterator.h
    src/leveldb/util/arena.cc
    src/leveldb/util/arena.h
    src/leveldb/util/arena_test.cc
    src/leveldb/util/bloom.cc
    src/leveldb/util/bloom_test.cc
    src/leveldb/util/cache.cc
    src/leveldb/util/cache_test.cc
    src/leveldb/util/coding.cc
    src/leveldb/util/coding.h
    src/leveldb/util/coding_test.cc
    src/leveldb/util/comparator.cc
    src/leveldb/util/crc32c.cc
    src/leveldb/util/crc32c.h
    src/leveldb/util/crc32c_test.cc
    src/leveldb/util/env.cc
    src/leveldb/util/env_posix.cc
    src/leveldb/util/env_test.cc
    src/leveldb/util/env_win.cc
    src/leveldb/util/filter_policy.cc
    src/leveldb/util/hash.cc
    src/leveldb/util/hash.h
    src/leveldb/util/histogram.cc
    src/leveldb/util/histogram.h
    src/leveldb/util/logging.cc
    src/leveldb/util/logging.h
    src/leveldb/util/mutexlock.h
    src/leveldb/util/options.cc
    src/leveldb/util/posix_logger.h
    src/leveldb/util/random.h
    src/leveldb/util/status.cc
    src/leveldb/util/testharness.cc
    src/leveldb/util/testharness.h
    src/leveldb/util/testutil.cc
    src/leveldb/util/testutil.h
    src/leveldb/.gitignore
    src/leveldb/AUTHORS
    src/leveldb/build_detect_platform
    src/leveldb/LICENSE
    src/leveldb/Makefile
    src/leveldb/NEWS
    src/leveldb/README
    src/leveldb/TODO
    src/leveldb/WINDOWS.md
    src/obj/.gitignore
    src/obj-test/.gitignore
    src/qt/forms/aboutdialog.ui
    src/qt/forms/addressbookpage.ui
    src/qt/forms/askpassphrasedialog.ui
    src/qt/forms/coincontroldialog.ui
    src/qt/forms/editaddressdialog.ui
    src/qt/forms/optionsdialog.ui
    src/qt/forms/overviewpage.ui
    src/qt/forms/qrcodedialog.ui
    src/qt/forms/rpcconsole.ui
    src/qt/forms/sendcoinsdialog.ui
    src/qt/forms/sendcoinsentry.ui
    src/qt/forms/signverifymessagedialog.ui
    src/qt/forms/transactiondescdialog.ui
    src/qt/locale/bitcoin_af_ZA.ts
    src/qt/locale/bitcoin_ar.ts
    src/qt/locale/bitcoin_bg.ts
    src/qt/locale/bitcoin_bs.ts
    src/qt/locale/bitcoin_ca.ts
    src/qt/locale/bitcoin_ca_ES.ts
    src/qt/locale/bitcoin_cs.ts
    src/qt/locale/bitcoin_cy.ts
    src/qt/locale/bitcoin_da.ts
    src/qt/locale/bitcoin_de.ts
    src/qt/locale/bitcoin_el_GR.ts
    src/qt/locale/bitcoin_en.ts
    src/qt/locale/bitcoin_eo.ts
    src/qt/locale/bitcoin_es.ts
    src/qt/locale/bitcoin_es_CL.ts
    src/qt/locale/bitcoin_et.ts
    src/qt/locale/bitcoin_eu_ES.ts
    src/qt/locale/bitcoin_fa.ts
    src/qt/locale/bitcoin_fa_IR.ts
    src/qt/locale/bitcoin_fi.ts
    src/qt/locale/bitcoin_fr.ts
    src/qt/locale/bitcoin_fr_CA.ts
    src/qt/locale/bitcoin_gu_IN.ts
    src/qt/locale/bitcoin_he.ts
    src/qt/locale/bitcoin_hi_IN.ts
    src/qt/locale/bitcoin_hr.ts
    src/qt/locale/bitcoin_hu.ts
    src/qt/locale/bitcoin_it.ts
    src/qt/locale/bitcoin_ja.ts
    src/qt/locale/bitcoin_la.ts
    src/qt/locale/bitcoin_lt.ts
    src/qt/locale/bitcoin_lv_LV.ts
    src/qt/locale/bitcoin_nb.ts
    src/qt/locale/bitcoin_nl.ts
    src/qt/locale/bitcoin_pl.ts
    src/qt/locale/bitcoin_pt_BR.ts
    src/qt/locale/bitcoin_pt_PT.ts
    src/qt/locale/bitcoin_ro_RO.ts
    src/qt/locale/bitcoin_ru.ts
    src/qt/locale/bitcoin_sk.ts
    src/qt/locale/bitcoin_sr.ts
    src/qt/locale/bitcoin_sv.ts
    src/qt/locale/bitcoin_th_TH.ts
    src/qt/locale/bitcoin_tr.ts
    src/qt/locale/bitcoin_uk.ts
    src/qt/locale/bitcoin_zh_CN.ts
    src/qt/locale/bitcoin_zh_TW.ts
    src/qt/res/icons/add.png
    src/qt/res/icons/address-book.png
    src/qt/res/icons/bitcoin.icns
    src/qt/res/icons/bitcoin.ico
    src/qt/res/icons/bitcoin.png
    src/qt/res/icons/bitcoin_testnet.ico
    src/qt/res/icons/bitcoin_testnet.png
    src/qt/res/icons/black-leaf-md.png
    src/qt/res/icons/clock1.png
    src/qt/res/icons/clock2.png
    src/qt/res/icons/clock3.png
    src/qt/res/icons/clock4.png
    src/qt/res/icons/clock5.png
    src/qt/res/icons/configure.png
    src/qt/res/icons/connect0_16.png
    src/qt/res/icons/connect1_16.png
    src/qt/res/icons/connect2_16.png
    src/qt/res/icons/connect3_16.png
    src/qt/res/icons/connect4_16.png
    src/qt/res/icons/debugwindow.png
    src/qt/res/icons/edit.png
    src/qt/res/icons/editcopy.png
    src/qt/res/icons/editpaste.png
    src/qt/res/icons/export.png
    src/qt/res/icons/filesave.png
    src/qt/res/icons/history.png
    src/qt/res/icons/key.png
    src/qt/res/icons/lock_closed.png
    src/qt/res/icons/lock_open.png
    src/qt/res/icons/mining.png
    src/qt/res/icons/mining_active.png
    src/qt/res/icons/mining_inactive.png
    src/qt/res/icons/notsynced.png
    src/qt/res/icons/overview.png
    src/qt/res/icons/potcoin.icns
    src/qt/res/icons/potcoin.ico
    src/qt/res/icons/qrcode.png
    src/qt/res/icons/quit.png
    src/qt/res/icons/receive.png
    src/qt/res/icons/reddcoin.icns
    src/qt/res/icons/remove.png
    src/qt/res/icons/send.png
    src/qt/res/icons/staking_off.png
    src/qt/res/icons/staking_on.png
    src/qt/res/icons/synced.png
    src/qt/res/icons/Thumbs.db
    src/qt/res/icons/toolbar.png
    src/qt/res/icons/toolbar_testnet.png
    src/qt/res/icons/transaction0.png
    src/qt/res/icons/transaction2.png
    src/qt/res/icons/tx_inout.png
    src/qt/res/icons/tx_input.png
    src/qt/res/icons/tx_mined.png
    src/qt/res/icons/tx_output.png
    src/qt/res/images/about.png
    src/qt/res/images/splash.png
    src/qt/res/images/splash_testnet.png
    src/qt/res/images/wallet_bgcoin.png
    src/qt/res/movies/update_spinner.mng
    src/qt/res/src/bitcoin.svg
    src/qt/res/src/clock1.svg
    src/qt/res/src/clock2.svg
    src/qt/res/src/clock3.svg
    src/qt/res/src/clock4.svg
    src/qt/res/src/clock5.svg
    src/qt/res/src/clock_green.svg
    src/qt/res/src/inout.svg
    src/qt/res/src/questionmark.svg
    src/qt/res/bitcoin-qt.rc
    src/qt/test/test_main.cpp
    src/qt/test/uritests.cpp
    src/qt/test/uritests.h
    src/qt/aboutdialog.cpp
    src/qt/aboutdialog.h
    src/qt/addressbookpage.cpp
    src/qt/addressbookpage.h
    src/qt/addresstablemodel.cpp
    src/qt/addresstablemodel.h
    src/qt/askpassphrasedialog.cpp
    src/qt/askpassphrasedialog.h
    src/qt/bitcoin.cpp
    src/qt/bitcoin.qrc
    src/qt/bitcoinaddressvalidator.cpp
    src/qt/bitcoinaddressvalidator.h
    src/qt/bitcoinamountfield.cpp
    src/qt/bitcoinamountfield.h
    src/qt/bitcoingui.cpp
    src/qt/bitcoingui.h
    src/qt/bitcoinstrings.cpp
    src/qt/bitcoinunits.cpp
    src/qt/bitcoinunits.h
    src/qt/clientmodel.cpp
    src/qt/clientmodel.h
    src/qt/coincontroldialog.cpp
    src/qt/coincontroldialog.h
    src/qt/coincontroltreewidget.cpp
    src/qt/coincontroltreewidget.h
    src/qt/csvmodelwriter.cpp
    src/qt/csvmodelwriter.h
    src/qt/editaddressdialog.cpp
    src/qt/editaddressdialog.h
    src/qt/guiconstants.h
    src/qt/guiutil.cpp
    src/qt/guiutil.h
    src/qt/macdockiconhandler.h
    src/qt/macdockiconhandler.mm
    src/qt/macnotificationhandler.h
    src/qt/macnotificationhandler.mm
    src/qt/monitoreddatamapper.cpp
    src/qt/monitoreddatamapper.h
    src/qt/notificator.cpp
    src/qt/notificator.h
    src/qt/optionsdialog.cpp
    src/qt/optionsdialog.h
    src/qt/optionsmodel.cpp
    src/qt/optionsmodel.h
    src/qt/overviewpage.cpp
    src/qt/overviewpage.h
    src/qt/paymentserver.cpp
    src/qt/paymentserver.h
    src/qt/qrcodedialog.cpp
    src/qt/qrcodedialog.h
    src/qt/qvalidatedlineedit.cpp
    src/qt/qvalidatedlineedit.h
    src/qt/qvaluecombobox.cpp
    src/qt/qvaluecombobox.h
    src/qt/rpcconsole.cpp
    src/qt/rpcconsole.h
    src/qt/sendcoinsdialog.cpp
    src/qt/sendcoinsdialog.h
    src/qt/sendcoinsentry.cpp
    src/qt/sendcoinsentry.h
    src/qt/signverifymessagedialog.cpp
    src/qt/signverifymessagedialog.h
    src/qt/splashscreen.cpp
    src/qt/splashscreen.h
    src/qt/transactiondesc.cpp
    src/qt/transactiondesc.h
    src/qt/transactiondescdialog.cpp
    src/qt/transactiondescdialog.h
    src/qt/transactionfilterproxy.cpp
    src/qt/transactionfilterproxy.h
    src/qt/transactionrecord.cpp
    src/qt/transactionrecord.h
    src/qt/transactiontablemodel.cpp
    src/qt/transactiontablemodel.h
    src/qt/transactionview.cpp
    src/qt/transactionview.h
    src/qt/walletframe.cpp
    src/qt/walletframe.h
    src/qt/walletmodel.cpp
    src/qt/walletmodel.h
    src/qt/walletstack.cpp
    src/qt/walletstack.h
    src/qt/walletview.cpp
    src/qt/walletview.h
    src/test/data/alertTests
    src/test/data/base58_encode_decode.json
    src/test/data/base58_keys_invalid.json
    src/test/data/base58_keys_valid.json
    src/test/data/script_invalid.json
    src/test/data/script_valid.json
    src/test/data/sig_canonical.json
    src/test/data/sig_noncanonical.json
    src/test/data/tx_invalid.json
    src/test/data/tx_valid.json
    src/test/accounting_tests.cpp
    src/test/alert_tests.cpp
    src/test/allocator_tests.cpp
    src/test/base32_tests.cpp
    src/test/base58_tests.cpp
    src/test/base64_tests.cpp
    src/test/bignum_tests.cpp
    src/test/bloom_tests.cpp
    src/test/canonical_tests.cpp
    src/test/checkblock_tests.cpp
    src/test/Checkpoints_tests.cpp
    src/test/compress_tests.cpp
    src/test/DoS_tests.cpp
    src/test/getarg_tests.cpp
    src/test/key_tests.cpp
    src/test/miner_tests.cpp
    src/test/mruset_tests.cpp
    src/test/multisig_tests.cpp
    src/test/netbase_tests.cpp
    src/test/pmt_tests.cpp
    src/test/README
    src/test/rpc_tests.cpp
    src/test/script_P2SH_tests.cpp
    src/test/script_tests.cpp
    src/test/scrypt_tests.cpp
    src/test/serialize_tests.cpp
    src/test/sigopcount_tests.cpp
    src/test/test_bitcoin.cpp
    src/test/transaction_tests.cpp
    src/test/uint160_tests.cpp
    src/test/uint256_tests.cpp
    src/test/util_tests.cpp
    src/test/wallet_tests.cpp
    src/addrman.cpp
    src/addrman.h
    src/alert.cpp
    src/alert.h
    src/allocators.h
    src/base58.h
    src/bignum.h
    src/bitcoinrpc.cpp
    src/bitcoinrpc.h
    src/bloom.cpp
    src/bloom.h
    src/checkpoints.cpp
    src/checkpoints.h
    src/checkqueue.h
    src/clientversion.h
    src/coincontrol.h
    src/compat.h
    src/crypter.cpp
    src/crypter.h
    src/db.cpp
    src/db.h
    src/hash.cpp
    src/hash.h
    src/init.cpp
    src/init.h
    src/kernel.cpp
    src/kernel.h
    src/key.cpp
    src/key.h
    src/keystore.cpp
    src/keystore.h
    src/leveldb.cpp
    src/leveldb.h
    src/limitedmap.h
    src/main.cpp
    src/main.h
    src/makefile.linux-mingw
    src/makefile.mingw
    src/makefile.osx
    src/makefile.unix
    src/miner.cpp
    src/miner.h
    src/mruset.h
    src/net.cpp
    src/net.h
    src/netbase.cpp
    src/netbase.h
    src/noui.cpp
    src/protocol.cpp
    src/protocol.h
    src/rpcblockchain.cpp
    src/rpcdump.cpp
    src/rpcmining.cpp
    src/rpcnet.cpp
    src/rpcrawtransaction.cpp
    src/rpcwallet.cpp
    src/script.cpp
    src/script.h
    src/scrypt-sse2.cpp
    src/scrypt.cpp
    src/scrypt.h
    src/serialize.h
    src/sync.cpp
    src/sync.h
    src/threadsafety.h
    src/txdb-leveldb.cpp
    src/txdb-leveldb.h
    src/txdb.cpp
    src/txdb.h
    src/ui_interface.h
    src/uint256.h
    src/util.cpp
    src/util.h
    src/version.cpp
    src/version.h
    src/wallet.cpp
    src/wallet.h
    src/walletdb.cpp
    src/walletdb.h
    .gitattributes
    .gitignore
    atlassian-ide-plugin.xml
    COPYING
    INSTALL
    potcoin-qt.pro
    README.md)

add_executable(Potcoin_V2 ${SOURCE_FILES})